<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.SignUpActivity">
    <LinearLayout
        android:id="@+id/animView"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >
        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animationView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:lottie_rawRes="@raw/login_aim"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/animView"
        app:layout_constraintBottom_toTopOf="@id/bottomView"
        android:layout_marginHorizontal="20dp"
        android:orientation="vertical"
        android:gravity="center_vertical"
        >
        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/login_text"
            android:textSize="34sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:fontFamily="@font/rubik_bold"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/please_sign_up_amp_continue_with_us"
            android:fontFamily="@font/rubik_regular"
            android:textSize="18sp"
            android:textColor="#82838D"
            />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textFieldEmail"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"
            app:placeholderText="@string/email"
            app:startIconDrawable="@drawable/email"
            android:hint="@string/enter_your_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textFieldNewPassword"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"
            app:placeholderText="@string/new_password"
            app:startIconDrawable="@drawable/password"
            app:endIconMode="password_toggle"
            android:hint="@string/new_password">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/newPassword"
                android:inputType="textPassword"
                />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textFieldConfirmPassword"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"
            app:placeholderText="@string/confirm_password"
            app:startIconDrawable="@drawable/password"
            app:endIconMode="password_toggle"
            android:hint="@string/confirm_password">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:id="@+id/confirmPassword"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/singUpBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/sing_up"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textAllCaps="true"
            android:background="@drawable/btn_shape"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/loginBtn"
            android:text="@string/do_you_have_an_account_login"
            android:textAlignment="center"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/rubik_regular"
            android:textStyle="bold"
            />

    </LinearLayout>

    <ImageView
        android:id="@+id/bottomView"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:src="@drawable/wave"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toBottomOf="parent"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>