<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.IntroActivity">

    <LinearLayout
        android:id="@+id/animView"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >
        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animationView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:lottie_rawRes="@raw/start_anim"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/animView"
        app:layout_constraintBottom_toTopOf="@id/bottomView"
        android:layout_marginHorizontal="20dp"
        android:orientation="vertical"
        android:gravity="center_vertical"
        >
        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textSize="34sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:fontFamily="@font/rubik_bold"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lorem"
            android:fontFamily="@font/rubik_regular"
            android:textSize="18sp"
            android:textColor="#82838D"
            />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/getStartedBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:textStyle="bold"
            android:text="@string/get_started"
            android:textAllCaps="true"
            android:background="@drawable/btn_shape"
            />

    </LinearLayout>

    <ImageView
        android:id="@+id/bottomView"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:src="@drawable/wave"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toBottomOf="parent"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>